# Practical-Rust-Web-Projects-Building-Cloud-and-Web-Based-Applications

./: .gitignore  README.md
new_project/src/: main.rs
projects/page-011-hello-world/: Cargo.toml
projects/page-011-hello-world/src/: main.rs
projects/page-016-static-files/: Cargo.toml
projects/page-016-static-files/src/: main.rs
projects/page-018-external-image-and-css/: Cargo.toml
projects/page-018-external-image-and-css/src/: main.rs
projects/page-018-external-image-and-css/static/: index.html
projects/page-022-dynamic-templates/: Cargo.toml
projects/page-022-dynamic-templates/static/: index.hbs
projects/page-031-using-a-database/: Cargo.toml
projects/page-031-using-a-database/src/: main.rs  models.rs
projects/page-038-adding-cats-with-a-form/: Cargo.toml
projects/page-038-adding-cats-with-a-form/src/: main.rs  models.rs
projects/page-038-adding-cats-with-a-form/static/: add.hbs
projects/page-048-showing-the-cat-detail-page/: Cargo.toml
projects/page-048-showing-the-cat-detail-page/src/: main.rs
projects/page-048-showing-the-cat-detail-page/static/: add.hbs  index.hbs
projects/page-057-converting-to-rest-api/: Cargo.toml
projects/page-057-converting-to-rest-api/src/: main.rs
projects/page-057-converting-to-rest-api/static/: cat.hbs  index.hbs
projects/page-068-api-testing/: Cargo.toml
projects/page-068-api-testing/src/: main.rs
projects/page-068-api-testing/static/: index.html
projects/page-073-building-the-cat-detail-api/: Cargo.toml
projects/page-077-input-validation/: Cargo.toml
projects/page-086-using-a-custom-built-error-type/: Cargo.toml
projects/page-091-customize-the-web-path-extractor-error/: Cargo.toml
projects/page-092-logging/: Cargo.toml
projects/page-099-enabling-https/: Cargo.toml
projects/page-099-enabling-https/migrations/2022-01-02-075311_create_cats/: up.sql
projects/page-099-enabling-https/src/: errors.rs  main.rs
projects/page-099-enabling-https/static/css/: cat.css
projects/page-108-a-websocket-echo-server/: Cargo.toml
projects/page-113-pushing-notifications-from-the-server/: Cargo.toml
projects/page-118-cleaning-up-unresponsive-clients/: Cargo.toml
projects/page-122-unresponsive-timer/: Cargo.toml
projects/page-128-two-way-chat/: Cargo.toml
projects/page-133-sending-structural-json-data/: Cargo.toml
projects/page-147-hello-world-in-lambda/: Cargo.toml
projects/page-147-hello-world-in-lambda/src/: main.rs
projects/page-157-using-the-serverless-framework/: Cargo.toml  package-lock.json  serverless.yml
projects/page-157-using-the-serverless-framework/cats/: Cargo.toml
projects/page-157-using-the-serverless-framework/cats/src/: main.rs
projects/page-198-hello-webassembly/: Cargo.toml
projects/page-206-hello-webassembly/: LICENSE_MIT
projects/serverless-catdex/: package-lock.json  package.json  serverless.yml
(+19 files in other folders)
