[package]
name = "page-022-dynamic-templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.3"
handlebars = { version = "4.1.6", features = ["dir_source"] }
serde_json = "1.0.74"
