[package]
name = "page-031-using-a-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.3"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
handlebars = { version = "4.1.6", features = ["dir_source"] }
r2d2 = "0.8.9"
serde = "1.0.133"
serde_json = "1.0.74"
