[package]
name = "page-073-building-the-cat-detail-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-rt = "2.5.1"
actix-web = "3.3.3"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
serde = "1.0.133"
serde_json = "1.0.74"
