[package]
name = "page-099-enabling-https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-rt = "2.5.1"
actix-web = { version = "3.3.3", features = ["openssl"] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
env_logger = "0.9.0"
log = "0.4.14"
openssl = "0.10.38"
r2d2 = "0.8.9"
serde = "1.0.133"
serde_json = "1.0.74"
validator = "0.14.0"
validator_derive = "0.14.0"
