[package]
name = "cats"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
openssl = { version = "0.10", features = ["vendored"] }
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
